Fix #31748: Blender crashes when typing "al" after opening spacebar menu.

Crash was introduced by own refactoring of poll functions in clip editor.